--- a/3.4/practice/work/app/views/render/country/list.twig
+++ b/3.4/practice/work/app/views/render/country/list.twig
@@ -1,7 +1,7 @@
 {% if countries %}
     <select id="countries">
     {% for key, value in countries %}
-        <option value="{{ countries.name }}">+{{ key }}</option>
+        <option value="{{ value.name }}">+{{ key }}</option>
     {% endfor %}
     </select>
 {% else %}
